--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -53,10 +53,11 @@
 
 // 页面内容区域
 .page-content {
-  background: white;
+  background: #f5f5f9;
   padding: 20px;
-  border-radius: 4px;
+  border-radius: 10px;
   box-shadow: 0 2px 8px rgba(0,0,0,6%);
   height: calc(100vh - 180px);
   overflow: auto;
+  border:4px;
 }
